@@ -14,6 +14,7 @@
 - added vips_mapim() ... resample with an index image, plus test
 - try to improve vips_resize() quality a little more
 - vips_resize() can do non-square resizes
+- dzsave won't write empty tiles in google mode
 
 7/5/15 started 8.1.1
 - oop, vips-8.0 wrapper script should be vips-8.1, thanks Danilo
